--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,3 +26,10 @@
 .mainPage {
   margin-top: 10em;
 }
+
+.articleBlock{
+  border-color:  #f7022a;
+  border-style: solid;
+  border-width: 5px;
+  padding: 1em;
+}
