--- a/client/src/components/DeleteBtn/style.css
+++ b/client/src/components/DeleteBtn/style.css
@@ -2,4 +2,10 @@
     float: right;
     color: #e74944;
   }
+
+  .delete-btn:hover{
+    color: yellow;
+    transition-duration: 1s;
+    transform: rotate(180degrees);
+  }
   
