--- a/client/src/components/EditBtn/style.css
+++ b/client/src/components/EditBtn/style.css
@@ -1,12 +1,7 @@
 .edit-btn {
     float: right;
-    color: #e74944;
-    margin-right: 10px;
+    color: white;
+    /* margin-right: 10px; */
+    padding: 5px;
+    
   }
-
-  .edit-btn:hover{
-    color: yellow;
-    transition-duration: 1s;
-    transform: rotate(180degrees);
-  }
-  
