--- a/client/src/components/Admin/style.css
+++ b/client/src/components/Admin/style.css
@@ -1,17 +1,15 @@
 .mainPage {
     margin-top: 10em;
   }
-  
+  .mb-3 {
+    margin-bottom: .5rem!important;
+  }
+  .form-group{
+    margin-bottom: 0.5rem!important;
+  }
   .articleBlock{
-    /* border-color:  #f7022a;
-    border-style: solid;
-    border-width: 5px;
-    padding: 1em;
-    margin: 5px;
-    width: 100%; */
-    padding: 1em;
-    
-    
+    padding: 1em 0.1em ;
+    white-space: pre-line;
   }
   
   #updateBtn, #submitBtn {
