--- a/client/src/pages/Admin.css
+++ b/client/src/pages/Admin.css
@@ -1,5 +1,6 @@
 .mainPage {
     margin-top: 10em;
+    margin-bottom: 5em;
   }
   .mb-3 {
     margin-bottom: .5rem!important;
@@ -22,9 +23,11 @@
     padding: 6px;
     
   }
-.templateCol, .dateCol, .editCol{
+.templateCol, .dateCol, .editCol, .titleCol, .authorCol{
   text-align: center;
 }
+
+
 
    /* Pulse */
    @-webkit-keyframes hvr-pulse {
