--- a/client/src/pages/Articles.css
+++ b/client/src/pages/Articles.css
@@ -6,12 +6,35 @@
     position: relative;
 }
 .postTitle{
-    font-size: 28px;
+    font-size: 20px;
     position: relative;
-    bottom: 70px;
-    left: 30%;
+    bottom: 45px;
+    left: 5%;
     background: white;
     padding: 10px;
     text-align: right;
-    display: inline-block
+    display: inline-block;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 400px;
+
 }
+.hvr-float {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
