change size of background nav

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -67,7 +67,7 @@
 .navbar {
     opacity: .95;
     background-image: url("./alza_header.jpeg");
-    background-size: auto;
+    background-size: 100%;
 
 }
 
