--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -61,8 +61,16 @@
 }
 
 .navbar-brand {
-    margin-left: 15px;
-    font-size: 28px;
+    /* margin-left: 15px; */
+    
+    display: block;
+    padding: .5em 1.1em;
+    font-size: 18px;
+    /* width: 5em;
+    height: 5em; */
+    text-align: center;
+    background-color: #329760
+    
 }
 .navbar {
     opacity: .95;
@@ -75,12 +83,13 @@
 }
 
 .navbar-dark .navbar-brand {
-    border-color:  yellow;
-    border-style: solid;
-    border-width: 5px;
-    padding: 1rem;
-    margin: 1rem;
+    /* border-color:  yellow; */
+    border-style: double;
+    border-width: 4px;
+    /* padding: 1rem; */
+    margin: 1em;
     margin-left: 3rem;
+    line-height: 1.2;
     
 }
 
