--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -20,41 +20,7 @@
 .rowNav{
     width: 100vw;
 }
-#navAbout::after, #navPort::after, #navContact::after, #stories::after {
-    content: " ";
-    position: absolute;
-    /* width: 100%; */
-    height: 3px;
-    bottom: 0;
-    left: 0;
-    background-color: yellow;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-    
-}
-#navAbout:hover::after, #navPort:hover::after, #navContact:hover::after, #stories:hover::after  {
-    /* content: ' ';
-    background-color: aquamarine;
-    padding: 5px;
-    display: block; */
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-    
 
-}
-
- #navAbout:hover{
-    color: white;
-    /* text-decoration-color: white; */
-    
- }
-.nav-item a:hover{
-    text-decoration: none;
-}
 
 .navDiv {
     /* width: 100%; */
@@ -80,9 +46,7 @@
     margin-bottom: 0;
 }
 
-.navbar-collapse {
-    /* justify-content: flex-end; */
-}
+
 
 .navbar-dark .navbar-brand {
     /* border-color:  yellow; */
@@ -90,11 +54,13 @@
     border-width: 4px;
     /* padding: 1rem; */
     margin: .2em;
-    margin-left: 2em;
+    /* margin-left: 2em; */
     line-height: 1.2;
     
 }
-
+.navbar-dark .alzaLogo{
+    margin-left: 2em;
+}
 
 .quote{
     font-style: italic;
@@ -149,7 +115,7 @@
         font-size: 9px;
     }
     .navMenu{
-        font-size: 12px;
+        font-size: 9px;
         
     }
     .navMenuItems{
