--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -106,10 +106,10 @@
     .searchBox{
         /* margin-left: 10px; */
     }
-    .secondRowBox{
+    /* .secondRowBox{
         padding: 0px;
         margin: 0;
-    }
+    } */
     .navbar-brand{
         /* margin-left: 40vw; */
         padding: .25em .55em;
