--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -86,6 +86,9 @@
     padding: 2px 25px;
     
 }
+.navbar-dark .navbar-toggler{
+    border-color: transparent;
+}
 
 @media only screen and (max-width: 800px) {
     /* #navAbout:hover::after, #navPort:hover::after, #navContact:hover::after  {
