hide main nav bar in mobile

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -99,7 +99,7 @@
         /* margin-top: 4em; */
         border: none;
         padding: 0;
-        margin: 3.75em 0 0 0;
+        margin: 0 0 0 0;
         z-index: 9999;
     }
     .searchInput{
