--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -89,6 +89,10 @@
 .navbar-dark .navbar-toggler{
     border-color: transparent;
 }
+a:hover, a:visited, a:link, a:active{
+    text-decoration: none;
+    color: rgb(0,0,0,.9);
+}
 
 @media only screen and (max-width: 800px) {
     /* #navAbout:hover::after, #navPort:hover::after, #navContact:hover::after  {
